# argparse-help-markdown

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint-workflows.yaml  pre-commit-autoupdate-pr.yaml  publish.yaml  test.yaml
src/: argparse_help_markdown.py
tests/: test_choice.py  test_cli.py  test_default.py  test_directory_loader.py  test_escaping.py  test_groups.py  test_module_loader.py  test_no_help.py  test_run_api.py  test_runs.py
tests/data/: choice.py  default.py  example.py  groups.py  md_link.py  no_argparse.py  no_help.py  underscore_and_pipes.py
