[project]
name = "argparse-help-markdown"
dynamic = ["version"]
description = "Pull argparse configuration out of a CLI tool and write it as Markdown. Great for embedded in a README.md with cog."
readme = "README.md"
authors = [
    { name = "ellieayla", email = "1447600+me@users.noreply.github.com" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
argparse-help-markdown = "argparse_help_markdown:main"

[build-system]
requires = ["setuptools >= 80.0", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-datafiles>=3.0.1",
    "pytest-mypy>=1.0.1",
]


[tool.coverage.paths]
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
fail_under = 100
omit = ["/**/pytest-*/test_*/*.py"]

[tool.pytest.ini_options]
addopts = "--mypy --cov --failed-first"

[tool.mypy]
check_untyped_defs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
warn_return_any = true
disallow_untyped_defs = true
strict = true

files = "src,tests"



[tool.ruff]
line-length = 150

[tool.ruff.format]
exclude = [
]

[tool.ruff.lint]
select = [
    "I",  # import sort
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "Q000",  # double quotes preferred
]
ignore = [
    "ERA001",  # Found commented-out code
    "FIX",  # todos
    "D100",  # Missing docstring in public module
    "D213",  # docstrings
    "D212",  # Multi-line docstring summary should start at the first line
    "SIM108",  # ternary operators could be used instead, but harder to read
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",  # asserts in tests are good
    "D100",  # Missing docstring in public module
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
]
"tests/data/*.py" = [  # system under test
    "D100",  # Missing docstring in public module
    "D103",  # Missing docstring in public function
    "EM101",  # string literal in exception
    "TRY003",  # long text outside the exception class
    "INP001",  # don't need __init__.py in tests/data/ directory
]

# uv tool run pytest-watcher -sv .
[tool.pytest-watcher]
now = true
clear = true
notify_on_failure = false
delay = 0.2
runner = ".venv/bin/pytest"
patterns = ["*.py"]
ignore_patterns = []
